[tool.poetry]
name = "advanced-rag"
version = "0.1.0"
description = ""
authors = ["nickchecan <nicholas.checan@icloud.com>"]
readme = "README.md"
packages = [{ include = "graph" }]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.13.3"
langchain = "^0.3.20"
langgraph = "^0.3.5"
langchainhub = "^0.1.21"
langchain-community = "^0.3.19"
tavily-python = "^0.5.1"
langchain-chroma = "^0.2.2"
langchain-openai = "^0.3.8"
python-dotenv = "^1.0.1"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.3.5"
grandalf = "^0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
